# SoilTracers.jl

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  REQUIRE  dune-project  soiltracers.opam
ocaml/base/: dune  grid.ml  grid.mli
ocaml/physchem/: chem.ml  chem.mli  constants.ml  phys.ml  phys.mli
ocaml/solvers/: cnsolver.ml  cnsolver.mli
src/: SoilTracers.jl  constants.jl  consts.jl
src/base/: dune  grid.ml  grid.mli
src/grid/: fvgrid.ml  fvgrid.mli  grid_exn.ml  grid_exn.mli  grid_sig.ml
src/lib/: chem.ml  chem.mli  constants.mli  dune  phys.ml  phys.mli
src/physchem/: chem.ml  chem.mli  constants.mli  diffus.jl  phys.ml  phys.mli  physchem.jl  rxn.jl  solub.jl  thermodyn.jl  water.jl
src/soilgrid/: soilgrid.jl
src/soiltracers/: dune  soiltracers.ml  soiltracers.mli
src/solvers/: cnsolver.ml  cnsolver.mli
src/tracers/: cos.jl  dune  h2o.jl  tracers.jl  tracers.ml
test/: consts.jl  runtests.jl  test_constants.jl  test_consts.jl  test_h2o.jl
test/physchem/: diffus.jl  physchem.jl  rxn.jl  solub.jl  thermodyn.jl  water.jl
test/soilgrid/: soilgrid.jl
test/test_physchem/: test_diffus.jl  test_rxn.jl  test_solub.jl  test_water.jl
